@@ -1,4 +1,4 @@
-.TH DRUMKV1 "1" "June 17, 2014"
+.TH DRUMKV1 "1" "August 31, 2020"
 .SH NAME
 drumkv1 \- an old-school drum-kit sampler
 .SH SYNOPSIS
@@ -23,6 +23,10 @@ URI: http://drumkv1.sourceforge.net/lv2
 \fB\-g\fR, \fB\-\-no\-gui\fR
 .IP
 Disable the graphical user interface (GUI)
+.HP
+\fB\-n\fR, \fB\-\-client\-name\fR=[\fIlabel\fR]
+.IP
+Set the JACK client name (default: drumkv1)
 .HP
 \fB\-h\fR, \fB\-\-help\fR
 .IP
